@@ -204,7 +204,7 @@ lineformat = warn=LINE1,D0D050;crit=LINE1,D05050
 # A single qualified data source must end with a semicolon.
 #fixedscale = .*,PING,loss,.*;
 
-# Graphs to show in host-service page (day, week, month, quarter, year)
+# Graphs to show in host-service page (hour, day, week, month, quarter, year)
 timeall = day,week,month,year
 # Graphs to show in host page
 timehost = day,week,month
@@ -215,13 +215,14 @@ timegroup = day,week,month
 
 # Time periods that should default to expanded state.  If not specified here,
 # the period will default to a collapsed state.
-expand_timeall = day,week,month,year
+expand_timeall = hour,day,week,month,quarter,year
 expand_timehost = week
 expand_timeservice = week
 expand_timegroup = day
 
 # Formats for time and date.
 timeformat_now = %H:%M:%S %d %b %Y %Z
+timeformat_hour = %H:%M
 timeformat_day = %H:%M %e %b
 timeformat_week = %e %b
 timeformat_month = Week %U
